--- a/styles/sass/foundation/_variables.scss
+++ b/styles/sass/foundation/_variables.scss
@@ -1,6 +1,7 @@
 $cWhite: white;
 $cBlack: #333333;
-$cBlue: #0b365b;
+$cBlue: #082742;
+$cBgAbout: #212d3d;
 $cLabelBg: #e8e8e8;
 $cBgGray: #f0f0f0;
 $color-html: #e44f26;
@@ -9,6 +10,7 @@ $color-js: #f5df4b;
 $color-sass: #dc7bab;
 $color-wp: #387193;
 $color-git: #da593e;
+$fcWhite: #eee;
 
 :root {
   // --color-primary: #143a52;
