--- a/styles/sass/layout/_split.scss
+++ b/styles/sass/layout/_split.scss
@@ -34,13 +34,14 @@
 
     &--body {
       width: 100%;
+      padding: 60px 0;
       padding-right: 3%;
       padding-left: 8%;
     }
 
     &--img {
       width: 100%;
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       // background-image: url(../images/sp_mv.jpg);
       background-image: url(../images/create-3026190_1920.jpg);
     }
