--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -16,6 +16,16 @@
 }
 
 /*--------------------------------
+  About
+  ---------------------------------*/
+.about {
+  background-color: $cBgAbout;
+  color: $fcWhite;
+  .title {
+    color: $fcWhite;
+  }
+}
+/*--------------------------------
   Skill
   ---------------------------------*/
 .skill {
