--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -19,10 +19,26 @@
   About
   ---------------------------------*/
 .about {
-  background-color: $cBgAbout;
+  background-color: $cBlue;
   color: $fcWhite;
   .title {
     color: $fcWhite;
+  }
+  &--body {
+    display: grid;
+    grid-template-columns: 140px 1fr;
+    gap: 50px;
+    align-items: center;
+  }
+  &--img {
+    & img {
+      background: $cWhite;
+      border-radius: 50%;
+      // @include mq-down(lg) {
+      object-fit: cover;
+      height: 140px;
+      // }
+    }
   }
 }
 /*--------------------------------
@@ -98,50 +114,44 @@
 ---------------------------------*/
 .works {
   &--list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: -40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    justify-items: center;
+    @include mq-down(xl) {
+      grid-template-columns: repeat(2, 1fr);
+    }
     @include mq-down(lg) {
-      justify-content: space-between;
+      grid-template-columns: 1fr;
     }
   }
 
   &--item {
-    width: 31.74603%;
-    margin-right: 1.5873%;
-    margin-bottom: 40px;
-    @include mq-down(lg) {
-      flex: 0 0 48%;
-      margin-right: 0;
-      margin-bottom: 30px;
-    }
+    justify-self: center;
     & > a {
       color: #333;
     }
-
-    &:hover {
-      opacity: 0.9;
-      // transform: scale(1.1);
-      transition: all 0.3s;
-    }
-
     &:nth-of-type(3n) {
       margin-right: 0;
     }
   }
 
   &--img {
+    overflow: hidden;
+    width: 400px;
+    height: 300px;
     & img {
       border: 1px solid #e6e6e6;
-      @include mq-down(lg) {
-        object-fit: cover;
-        width: inherit;
-        height: 40vw;
+      display: block;
+      transition: 0.5s;
+      &:hover {
+        opacity: 0.9;
+        transform: scale(1.05);
       }
     }
   }
 
-  &--name {
+  &--sitename {
     font-size: 14px;
     font-weight: bold;
     margin-top: 8px;
@@ -164,17 +174,6 @@
     margin-top: 10px;
   }
 }
-
-//
-.test {
-  .Block1 {
-    clip-path: polygon(0 0, 100% 25%, 100% 100%, 0 100%); //左上から時計回り
-    background-color: #191970;
-    color: #ccc;
-    padding: 60px 0 10px 0;
-  }
-}
-//
 
 /*--------------------------------
  下層：Worksページ
@@ -223,19 +222,25 @@
     // line-height: 1.7;
   }
 
-  /* Skill */
-  .skill--list {
-    display: block;
-    margin-bottom: 0;
+  /* Skills */
+  .skill {
+    &--list {
+      display: block;
+      margin-bottom: 0;
+    }
+
+    &--item {
+      width: 100%;
+      margin-bottom: 35px;
+    }
+
+    &--item:last-child {
+      margin-bottom: 0;
+    }
   }
 
-  .skill--item {
-    width: 100%;
-    margin-bottom: 35px;
-  }
-
-  .skill--item:last-child {
-    margin-bottom: 0;
+  /* Works */
+  .works {
   }
 
   /* フッター */
