--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -120,14 +120,14 @@
 .works {
   &--list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     gap: 30px;
     justify-items: center;
-    @include mq-down(xl) {
+    @include mq-up(lg) {
       grid-template-columns: repeat(2, 1fr);
     }
-    @include mq-down(lg) {
-      grid-template-columns: 1fr;
+    @include mq-up(xl) {
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 
@@ -143,19 +143,24 @@
 
   &--img {
     overflow: hidden;
-    width: 400px;
-    height: 300px;
+    width: 320px;
+    height: 280px;
+    object-fit: cover;
     & img {
       border: 1px solid #e6e6e6;
       display: block;
       transition: 0.5s;
+      width: 100%;
+      height: 100%;
       &:hover {
         opacity: 0.9;
         transform: scale(1.05);
       }
     }
-    @include mq-down(md) {
-      width: 300px;
+    @include mq-up(md) {
+      width: 400px;
+      height: 300px;
+      object-fit: cover;
     }
   }
 
@@ -180,45 +185,6 @@
 
   &--text {
     margin-top: 10px;
-  }
-}
-
-/*--------------------------------
- 下層：Worksページ
----------------------------------*/
-.article {
-  padding: 80px 0;
-
-  &--inner {
-    max-width: 1040px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-
-  &--title {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-
-  &--img {
-    margin-bottom: 20px;
-  }
-
-  &--body {
-    max-width: 720px;
-    margin: 0 auto;
-    margin-bottom: 80px;
-    & img {
-      margin-bottom: 30px;
-    }
-
-    & p {
-      margin-bottom: 30px;
-    }
-  }
-
-  &--info-title {
-    font-size: 15px;
   }
 }
 
