--- a/styles/style.css
+++ b/styles/style.css
@@ -441,48 +441,55 @@ button {
 }
 
 .split--body {
-  width: 50%;
+  width: 100%;
+  padding: 60px 0;
   padding-right: 3%;
-  padding-left: 10%;
+  padding-left: 8%;
+}
+
+.split--title {
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  padding-bottom: 20px;
+}
+
+.split--text {
+  font-size: 0.8em;
 }
 
 .split--img {
-  width: 50%;
+  width: 100%;
   height: 70vw;
-  max-height: 860px;
   background-image: url(../images/create-3026190_1920.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
 
-.split--title {
-  font-size: 42px;
-  font-weight: bold;
-  line-height: 1.2;
-  margin-bottom: 20px;
-  letter-spacing: 0.05em;
-}
-
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 960px) {
   .split {
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
   .split--body {
-    width: 100%;
-    padding: 60px 0;
-    padding-right: 3%;
-    padding-left: 8%;
+    width: 50%;
+    padding-right: 5%;
+    padding-left: 10%;
   }
   .split--img {
-    width: 100%;
-    background-image: url(../images/create-3026190_1920.jpg);
+    width: 50%;
+    height: 70vw;
+    max-height: 700px;
   }
   .split--title {
-    font-size: 32px;
+    font-size: 54px;
+  }
+  .split--text {
+    margin-left: 0.5em;
   }
 }
 
@@ -915,6 +922,45 @@ button {
 }
 
 /* Pages */
+.deco1 {
+  position: relative;
+  padding: 0.5em;
+  background: #ccdee4;
+  color: white;
+}
+
+.deco1::before {
+  position: absolute;
+  content: "";
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 15px transparent;
+  border-right: solid 20px #959e9b;
+}
+
+.deco2 {
+  padding: 0.25em 1em;
+  background: transparent;
+  border-left: solid 5px #7798b6;
+}
+
+.deco3 {
+  position: relative;
+  padding: 0.25em 0;
+  width: 160px;
+}
+
+.deco3:after {
+  content: "";
+  display: block;
+  height: 6px;
+  margin: -7px 0;
+  background: -webkit-gradient(linear, left top, right top, from(#a86982), to(transparent));
+  background: linear-gradient(to right, #a86982, transparent);
+  border-radius: 40%;
+}
+
 /*--------------------------------
  見出し
 ---------------------------------*/
@@ -938,6 +984,7 @@ button {
 .about {
   background-color: #082742;
   color: #eee;
+  padding: 80px 0;
 }
 
 .about .title {
@@ -947,21 +994,26 @@ button {
 .about--body {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 140px 1fr;
-      grid-template-columns: 140px 1fr;
-  gap: 50px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  gap: 20px;
+  justify-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   .about--body {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    gap: 20px;
-    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: left;
+    -ms-grid-columns: 140px 1fr;
+        grid-template-columns: 140px 1fr;
+    gap: 50px;
   }
+}
+
+.about--img {
+  padding: 40px 0;
 }
 
 .about--img img {
@@ -970,6 +1022,12 @@ button {
   -o-object-fit: cover;
      object-fit: cover;
   height: 140px;
+}
+
+@media screen and (min-width: 600px) {
+  .about--img {
+    padding: 40px 0;
+  }
 }
 
 /*--------------------------------
@@ -1173,45 +1231,6 @@ button {
   /* フッター */
   .footer {
     padding: 20px;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .works-detail__list {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-  }
-}
-
-.works-detail__item {
-  text-align: center;
-}
-
-@media screen and (max-width: 600px) {
-  .works-detail__item:not(:last-child) {
-    margin: 40px 15px;
-  }
-}
-
-.works-detail__item img {
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 15px;
-}
-
-.works-detail__desc a {
-  color: #000;
-  display: inline-block;
-  text-decoration: underline;
-  width: 100%;
-}
-
-@media screen and (min-width: 600px) {
-  .works-detail__desc {
-    font-size: 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
