--- a/styles/sass/layout/_split.scss
+++ b/styles/sass/layout/_split.scss
@@ -4,50 +4,51 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 78px;
-  &--body {
-    width: 50%;
-    padding-right: 3%;
-    padding-left: 10%;
-  }
+  // font-size: 42px;
 
+  &--body {
+    width: 100%;
+    padding: 60px 0;
+    padding-right: 3%;
+    padding-left: 8%;
+  }
+  &--title {
+    font-size: 28px;
+    font-weight: bold;
+    line-height: 1.5;
+    letter-spacing: 0.05em;
+    padding-bottom: 20px;
+  }
+  &--text {
+    font-size: 0.8em;
+  }
   &--img {
-    width: 50%;
+    width: 100%;
     height: 70vw;
-    max-height: 860px;
-    // background-image: url(../images/mv.jpg);
+    // max-height: 500px;
     background-image: url(../images/create-3026190_1920.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
   }
 
-  &--title {
-    font-size: 42px;
-    font-weight: bold;
-    line-height: 1.2;
-    margin-bottom: 20px;
-    letter-spacing: 0.05em;
-  }
-
-  @include mq-down(lg) {
-    flex-direction: column-reverse;
-
+  @include mq-up(lg) {
+    flex-direction: row-reverse;
     &--body {
-      width: 100%;
-      padding: 60px 0;
-      padding-right: 3%;
-      padding-left: 8%;
+      width: 50%;
+      padding-right: 5%;
+      padding-left: 10%;
     }
-
     &--img {
-      width: 100%;
-      // margin-bottom: 20px;
-      // background-image: url(../images/sp_mv.jpg);
-      background-image: url(../images/create-3026190_1920.jpg);
+      width: 50%;
+      height: 70vw;
+      max-height: 700px;
     }
-
     &--title {
-      font-size: 32px;
+      font-size: 54px;
+    }
+    &--text {
+      margin-left: 0.5em;
     }
   }
 }
