--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -14,7 +14,8 @@
   }
 }
 
-.deco2 {
+.deco_vertical-line {
+  margin-left: 0.5em;
   padding: 0.25em 1em;
   background: transparent;
   border-left: solid 5px #7798b6;
