--- a/styles/sass/layout/_split.scss
+++ b/styles/sass/layout/_split.scss
@@ -7,6 +7,7 @@
   // font-size: 42px;
 
   &--body {
+    height: 100%;
     width: 100%;
     padding: 60px 0;
     padding-right: 3%;
@@ -20,12 +21,12 @@
     padding-bottom: 20px;
   }
   &--text {
-    font-size: 0.8em;
+    font-size: 0.9em;
   }
   &--img {
     width: 100%;
     height: 70vw;
-    // max-height: 500px;
+    max-height: 500px;
     background-image: url(../images/create-3026190_1920.jpg);
     background-repeat: no-repeat;
     background-position: center center;
@@ -36,8 +37,8 @@
     flex-direction: row-reverse;
     &--body {
       width: 50%;
-      padding-right: 5%;
-      padding-left: 10%;
+      padding-right: 7%;
+      padding-left: 8%;
     }
     &--img {
       width: 50%;
