--- a/styles/style.css
+++ b/styles/style.css
@@ -441,6 +441,7 @@ button {
 }
 
 .split--body {
+  height: 100%;
   width: 100%;
   padding: 60px 0;
   padding-right: 3%;
@@ -456,12 +457,13 @@ button {
 }
 
 .split--text {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 .split--img {
   width: 100%;
   height: 70vw;
+  max-height: 500px;
   background-image: url(../images/create-3026190_1920.jpg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -477,8 +479,8 @@ button {
   }
   .split--body {
     width: 50%;
-    padding-right: 5%;
-    padding-left: 10%;
+    padding-right: 7%;
+    padding-left: 8%;
   }
   .split--img {
     width: 50%;
@@ -817,6 +819,29 @@ button {
   }
 }
 
+.icon {
+  position: relative;
+}
+
+.icon::before {
+  position: absolute;
+  display: block;
+  content: "";
+  top: 50%;
+  left: -20px;
+  width: 1em;
+  height: 1em;
+  -webkit-transform: translate(-30%, -50%);
+          transform: translate(-30%, -50%);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.icon.twitter::before {
+  background-image: url(../images/twitter.svg);
+}
+
 @media screen and (max-width: 600px) {
   body.is-noscroll {
     overflow: hidden;
@@ -939,7 +964,8 @@ button {
   border-right: solid 20px #959e9b;
 }
 
-.deco2 {
+.deco_vertical-line {
+  margin-left: 0.5em;
   padding: 0.25em 1em;
   background: transparent;
   border-left: solid 5px #7798b6;
