--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -1,19 +1,3 @@
-.deco1 {
-  position: relative;
-  padding: 0.5em;
-  background: #ccdee4;
-  color: white;
-  &::before {
-    position: absolute;
-    content: "";
-    top: 100%;
-    left: 0;
-    border: none;
-    border-bottom: solid 15px transparent;
-    border-right: solid 20px rgb(149, 158, 155);
-  }
-}
-
 .deco_vertical-line {
   margin-left: 0.5em;
   padding: 0.25em 1em;
@@ -21,7 +5,7 @@
   border-left: solid 5px #7798b6;
 }
 
-.deco3 {
+.deco_shadow {
   position: relative;
   padding: 0.25em 0;
   width: 160px;
