--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -20,7 +20,8 @@
     // height: 100%;
   }
   &__title {
-    font-family: "Fredericka the Great", cursive;
+    // font-family: "Fredericka the Great", cursive;
+    font-family: "Barlow", cursive;
     font-size: inherit;
     // font-weight: 900;
     & a {
