--- a/styles/style.css
+++ b/styles/style.css
@@ -242,7 +242,7 @@ button {
 }
 
 .header__title {
-  font-family: "Fredericka the Great", cursive;
+  font-family: "Barlow", cursive;
   font-size: inherit;
 }
 
